--- a/newapp/templates/index.html
+++ b/newapp/templates/index.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
-{% load static %}
-<link rel="stylesheet" href="{% static 'style.css' %}">
-
 <body>
     <div class="container">
-        <h1>Members</h1>
+        <h1>USERS</h1>
         <table id="customers" border="1">
             <thead>
-                <th>Id</th>
+                <th>No</th>
                 <th>First Name</th>
                 <th>Last Name</th>
-                <th>Country</th>
+                <th>Email Address</th>
+                <th>Phon No</th>
+                <th>Place</th>
                 <th colspan="2" id="mid">Action</th>
             </thead>
             {% for x in mem %}
             <tr>
                 <td>{{x.id}}</td>
-                <td>{{x.firstname}}</td>
-                <td>{{x.lastname}}</td>
-                <td>{{x.country}}</td>
+                <td>{{x.first_name}}</td>
+                <td>{{x.last_name}}</td>
+                <td>{{x.email_address}}</td>
+                <td>{{x.phone_no}}</td>
+                <td>{{x.place}}</td>
                 <td>
-                    <a href="update/{{x.id}}"><button id="up">update</button></a>
+                    <a href="update"><button id="up">update</button></a>
                 </td>
                 <td>
-                    <a href="delete/{{x.id}}"><button id="del">delete</button></a>
+                    <a href="delete"><button id="del">delete</button></a>
                 </td>
             </tr>
             {% endfor %}
         </table>
         <br><br>
-        <a href="{% url 'add' %}"><button id="new3">Add Member</button></a>
-    </div>
+        <a href=""><button id="new3">Add Users</button></a>
+    </div>    
 </body>
-
 </html>
