--- a/newapp/templates/index.html
+++ b/newapp/templates/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
 </head>
+
+{% load static %}
+<link rel="stylesheet" href="{% static 'style.css' %}">
+
 <body>
     <div class="container">
-        <h1>USERS</h1>
         <table id="customers" border="1">
             <thead>
                 <th>No</th>
-                <th>First Name</th>
-                <th>Last Name</th>
+                <th> First Name</th>
+                <th> Last Name</th>
                 <th>Email Address</th>
-                <th>Phon No</th>
+                <th>Phone No</th>
                 <th>Place</th>
                 <th colspan="2" id="mid">Action</th>
             </thead>
@@ -27,16 +30,17 @@
                 <td>{{x.phone_no}}</td>
                 <td>{{x.place}}</td>
                 <td>
-                    <a href="update"><button id="up">update</button></a>
+                    <a href="update/{{x.id}}"><button id="up">update</button></a>
                 </td>
                 <td>
-                    <a href="delete"><button id="del">delete</button></a>
+                    <a href="delete/{{x.id}}"><button id="del">delete</button></a>
                 </td>
             </tr>
             {% endfor %}
         </table>
+    </div>
         <br><br>
-        <a href=""><button id="new3">Add Users</button></a>
+        <a href="{% url 'add' %}"><button id="new3">Add Users</button></a>
     </div>    
 </body>
 </html>
