--- a/newapp/static/style.css
+++ b/newapp/static/style.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 80px 240px 60px 240px;
+    margin: 80px 180px 60px 180px;
     padding: 0px 100px 100px 100px;
     /* background-color: #ccd0ce; */
 }
@@ -18,14 +18,6 @@
     padding: 10px 10px 10px 10px;
 }
 
-#customers tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-#customers tr:hover {
-    background-color: #ddd;
-}
-
 #customers th {
     padding-top: 12px;
     padding-bottom: 12px;
@@ -40,7 +32,7 @@
 
 #customers #up {
     background-color: blue;
-    border-color: white;
+    border: none;
     border-radius: 5px;
     padding: 8px;
     color: white;
@@ -48,7 +40,7 @@
 
 #customers #del {
     background-color: red;
-    border-color: white;
+    border: none;
     border-radius: 5px;
     padding: 8px;
     color: white;
@@ -61,12 +53,11 @@
 .container1 #new {
     background-color: #818583;
     border-radius: 5px;
-    margin: 20px 90px;
+    margin: 20px 120px;
     padding: 8px;
     color: black;
     border: none;
-    width: 250px;
-    
+    width: 250px;    
 }
 
 .container2 #new1 {
@@ -79,6 +70,7 @@
 
 h1 {
     color: black;
+    text-align: center;
 }
 
 .container1 input {
@@ -90,10 +82,12 @@ h1 {
 }
 
 .container1 {
-    margin: 80px 240px 60px 240px;
-    padding: 0px 100px 100px 100px;
-    background-color: #ccd0ce;
+    margin: 80px 300px 80px 300px;
+    padding: 20px 100px 100px 100px;
+    background-color: #ccd0ce;   
+    width: 500px; 
 }
+
 
 .container2 {
     margin: 80px 240px 60px 240px;
@@ -105,11 +99,13 @@ h1 {
     background-color: rgb(27, 24, 199);
     color: white;
     border-radius: 4px;
-    border-color: #04AA6D;
+    border: none;
+    width: 280px;
+    margin: 10px 250px;
 }
 .container1 .input1{
-    width: 200px;
+    width: 225px;
 }
 .container1 .input2{
-    width: 420px;
+    width: 475px;
 }
