--- a/newapp/templates/update.html
+++ b/newapp/templates/update.html
@@ -15,7 +15,7 @@
             <input type="text" name="email" placeholder="Email Address" value="{{mem.email_address}}" class="input2"><br><br>
             <input type="text" name="phone" placeholder="Phone Number" value="{{mem.phone_no}}" class="input2"><br><br>
             <input type="text" name="place" placeholder="Address" value="{{mem.place}}" class="input2"><br><br>
-            <button type="submit" id="new">Update</button>
+            <button type="submit" id="new">Save</button>
         </form>
     </div>
 </body>
