--- a/newapp/static/style.css
+++ b/newapp/static/style.css
@@ -89,10 +89,10 @@ h1 {
 }
 
 
-.container2 {
+/* .container2 {
     margin: 80px 240px 60px 240px;
     padding: 0px 100px 100px 100px;
-}
+} */
 
 .container #new3 {
     padding: 8px;
