--- a/newapp/templates/index.html
+++ b/newapp/templates/index.html
@@ -39,7 +39,7 @@
             {% endfor %}
         </table>
         <br><br>
-        <a href="{% url 'add' %}"><button id="new3">Add Users</button></a>
+        <a href="{% url 'add' %}"><button id="new3">Add Users</button></a><br><br>
     </div>
     </div>    
 </body>
