--- a/newapp/templates/update.html
+++ b/newapp/templates/update.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update User</title>
 </head>
+{% load static %}
+<link rel="stylesheet" href="{% static 'style.css' %}">
 <body>
     <div class="container1">
-        <h1>Create User</h1>
+        <h1>Update User</h1>
         <form action="{% url 'uprec' mem.id %}" method="post">
             {% csrf_token %}
             <input type="text" name="first" placeholder="First Name" value="{{mem.first_name}}" class="input1">
