--- a/newapp/templates/update.html
+++ b/newapp/templates/update.html
@@ -10,13 +10,13 @@
 <body>
     <div class="container1">
         <h1>Update User</h1>
-        <form action="{% url 'uprec' mem.id %}" method="post">
+        <form action="{% url 'uprec' user.id %}" method="post">
             {% csrf_token %}
-            <input type="text" name="first" placeholder="First Name" value="{{mem.first_name}}" class="input1">
-            <input type="text" name="last" placeholder="Last Name" value="{{mem.last_name}}" class="input1"><br><br>
-            <input type="text" name="email" placeholder="Email Address" value="{{mem.email_address}}" class="input2"><br><br>
-            <input type="text" name="phone" placeholder="Phone Number" value="{{mem.phone_no}}" class="input2"><br><br>
-            <input type="text" name="place" placeholder="Address" value="{{mem.place}}" class="input2"><br><br>
+            <input type="text" name="first" placeholder="First Name" value="{{user.first_name}}" class="input1">
+            <input type="text" name="last" placeholder="Last Name" value="{{user.last_name}}" class="input1"><br><br>
+            <input type="text" name="email" placeholder="Email Address" value="{{user.email_address}}" class="input2"><br><br>
+            <input type="text" name="phone" placeholder="Phone Number" value="{{user.phone_no}}" class="input2"><br><br>
+            <input type="text" name="place" placeholder="Address" value="{{user.place}}" class="input2"><br><br>
             <button type="submit" id="new">Save</button>
         </form>
     </div>
