--- a/newapp/templates/index.html
+++ b/newapp/templates/index.html
@@ -8,8 +8,7 @@
 
 {% load static %}
 <link rel="stylesheet" href="{% static 'style.css' %}">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"><body>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"><body>
     <div class="container">
         <table id="customers" border="1">
             <thead>
@@ -34,14 +33,15 @@
                 </td>
                 <td>
                     <a href="delete/{{i.id}}"><i class="fa-solid fa-trash"></i></a>
-                </td>   
+                </td>  
+                 
             </tr>
             {% endfor %}
         </table>
         <br><br>
-        <a href="{% url 'add' %}"><button id="new3" onclick="validate()" >Add Users</button></a><br><br>
-        
+        <a href="{% url 'add' %}"><button id="new3">Add Users</button></a><br><br>   
     </div>
-    </div>    
+    </div>  
+    
 </body>
 </html>
